# lazyaudio

./: .cursorrules  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.cursor/rules/: lazyaudio.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
LazyAudio/LazyAudio.xcodeproj/: project.pbxproj
docs/: DesignPatterns.md  PRD.md  README.md
fixtures/: .gitignore
scripts/: adhoc-sign-electron.mjs  after-pack.cjs  eval-lib.ts  eval-transcribe-fixtures.ts  repro-stream-leak.ts  spike-hotwords.txt  spike-online-zh-hotwords.ts
shared/: schema-version.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/binaries/: AudioCapCLI-aarch64-apple-darwin  AudioCapCLI-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/asr/: downloader.rs  engine.rs  mod.rs  model.rs  pipeline.rs  recognizer.rs  silero_vad.rs  types.rs
src-tauri/src/asr/multi_pass/: delayed_refiner.rs  mod.rs  result_merger.rs  scheduler.rs  segment_buffer.rs  sense_voice_refiner.rs  tier2_recognizer.rs
src-tauri/src/asr/providers/: deepgram.rs  local.rs  mod.rs  openai_whisper.rs
src-tauri/src/audio/: audiocap_cli.rs  capture.rs  consumer.rs  format.rs  level_meter.rs  limiter.rs  macos.rs  microphone.rs  microphone_manager.rs  mod.rs  pipeline.rs  recorder.rs  resampler.rs  ring_buffer.rs  speech_segment.rs  tee.rs  types.rs  vad.rs
src-tauri/src/commands/: asr.rs  mod.rs  model_events.rs
src-tauri/src/event/: bus.rs  mod.rs  tauri_bridge.rs  types.rs
src-tauri/src/mode/: input_method.rs  mod.rs
src-tauri/src/permissions/: macos.rs  manager.rs  mod.rs  types.rs  windows.rs
src-tauri/src/session/: manager.rs  mod.rs  runtime.rs  state.rs  types.rs
src-tauri/src/session/runtime/: audio_loop.rs  manager.rs  mod.rs  types.rs  utils.rs  worker.rs
src-tauri/src/storage/: config.rs  database.rs  engine.rs  mod.rs  session_storage.rs
(+370 files in other folders)
