[package]
name = "lazyaudio-core"
version = "0.1.0"
description = "LazyAudio - 桌面实时音频转录应用"
authors = ["LazyAudio Team"]
edition = "2021"

[lib]
name = "lazyaudio_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# 类型导出
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

# 错误处理
thiserror = "2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
