[package]
name = "lazyaudio-core"
version = "0.1.0"
description = "LazyAudio - 桌面实时音频转录应用"
authors = ["LazyAudio Team"]
edition = "2021"

[lib]
name = "lazyaudio_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

# WAV 文件写入
hound = "3.5"

# 类型导出
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

# 错误处理
thiserror = "2"
dirs = "6.0.0"
anyhow = "1.0.100"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# 音频采集
cpal = "0.15"
rubato = "1.0.0"

# ASR 语音识别 (sherpa-onnx)
sherpa-rs = { version = "0.6", features = ["download-binaries"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1", features = ["macros", "rt"] }
